# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.384 2005/11/17 22:27:13 wolf31o2 Exp $

  17 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Added call to update-usbids to download the latest usb.ids file.

  17 Nov 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  modules/generic_stage_target.py:
  Move checks of running catalyst into the target which is simpler

  17 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Attempt to fix bug #111752, due to mount_safety_check calling a lock object
  that doesnt exist yet

  17 Nov 2005; Eric Edgar <rocket@gentoo.org> targets/support/kmerge.sh:
  Keep unnecessary programs from installing into kerncache

  17 Nov 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  modules/generic_stage_target.py:
  Turn on more tracebacks at this point to better debug .. will need to turn
  them down as we find errors and build appropriate error handlers

  15 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  Changed version marker to 2.0_pre20051115 for new ebuild.

  15 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/livecd_stage2_target.py:
  Fix bug in livecd stage2 so that it doesnt try to use tar

  14 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage2/livecd-stage2-controller.sh:
  Fixed livecd/readme functionality, as reported to gentoo-catalyst mailing
  list by Paul Kessler <kessler@co.wabasha.mn.us> and forward-ported copying
  of Getting_Online.txt from catalyst 1.1.10.10.

  11 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org> AUTHORS:
  Added Joshua Kinard to authors for his mips contributions.

  11 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/livecd-stage2_template.spec:
  Fixed duplicate linuxrc entry in livecd-stage2_template.spec file. Blame
  Paul Kessler on gentoo-catalyst. ;]
